# bevy_tetris_web

./: Cargo.toml
.cargo/: config.toml
pkg/: bevy_tetris_web.d.ts  bevy_tetris_web.js  bevy_tetris_web_bg.wasm.d.ts
src/: bag.rs  gamescore.rs  gamestate.rs  main.rs  tetlib.rs  tetrominoe.rs
